--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -42,5 +42,10 @@ table {
 }
 
 * {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Arial', serif;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
