--- a/src/assets/styles/components/_preloader.scss
+++ b/src/assets/styles/components/_preloader.scss
@@ -1,14 +1,23 @@
 .preloader {
-  border: 20px solid black;
-  border-top: 20px solid orange;
-  animation: 3s linear 0s infinite forwards rotate;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
+
+  &__circle {
+    border: 20px solid black;
+    border-top: 20px solid orange;
+    animation: 3s linear 0s infinite forwards rotate;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+  }
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes rotate {
